# apptuner

./: .apptuner-pids.json  .env.example  .gitignore  AFFILIATE_MARKETING_STRATEGY.md  AFFILIATE_RECRUITMENT_GUIDE.md  ANDROID_TESTING_NOTES.md  ARCHITECTURE.md  AUTHENTICATION_SETUP.md  AUTH_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CODE_SNAPSHOT_20260206_191139.md  COMPLETE_SETUP_GUIDE.md  CONSECUTIVE_HOT_RELOAD_FIX.md  CURRENT_STATE_SNAPSHOT.md  CURRENT_STATUS.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dashboard  Dockerfile.relay  EXPO_STRATEGY.md  FEATURES.md  FORMSPREE_SETUP.md  FUTURE_FEATURES.md  HOT_RELOAD_DEBUG_LOG.md  MAINTENANCE_STRATEGY.md  MARKETING_STRATEGY.md  METRO_INTEGRATION_COMPLETE.md  NEXT_SESSION.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PRODUCTION_FEATURES.md  PROGRESS.md  QUICKSTART.md  README.md  REALISTIC_NEXT_STEPS.md  RESTORE_WORKING_STATE.md  RESTORE_WORKING_STATE.sh  ROUTE-TO-MARKET.md  SCALING.md  (+33 more)
cli/: package-lock.json  package.json
dist-mcp/: README.md  mcp.js  mcp.js.map  package.json
landing-page/: index.html
mobile/: .gitignore  app.json  babel.config.js  index.js  metro.config.js  package-lock.json  package.json  tsconfig.json
mobile-backup-1768320239/: README.md  index.js  package-lock.json  package.json  tsconfig.json
public/: index.html  llms.txt  manual-bundle.js  test-bundle-error.js  test-bundle-simple.js  test-bundle-with-image.js  test-bundle.js
relay/: README.md  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bundler.rs  lib.rs  main.rs  watcher.rs
(+113 files in other folders)
