[package]
name = "apptuner"
version = "0.1.0"
edition = "2021"

[lib]
name = "apptuner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6.1"
notify-debouncer-full = "0.3"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
